--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Διαχεριστής</title>
     <link rel="stylesheet" type="text/css" href="/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="{{{css}}}">
 </head>
 
 <body>
