add new painting

--- a/views/admin-edit.hbs
+++ b/views/admin-edit.hbs
@@ -42,7 +42,7 @@
 
         <div class="buttons">
             <button class="submit-btn" type="submit">Αποθήκευση</button>
-            <a href="/admin">Cancel</a>
+            <a href="/admin">Ακύρωση</a>
         </div>
 
     </form>
