--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -17,6 +17,8 @@ h3 {
 .container {
     width: 90%;
     margin: 2% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .ergo {
@@ -105,7 +107,8 @@ h5 {
 }
 
 .submit-btn {
-    padding: 1em;
+    padding: 0.5em;
+    font-size: 1.2em;
 }
 
 .buttons a {
@@ -138,4 +141,23 @@ textarea {
     max-height: 400px;
     object-fit: contain;
     flex: 50%;
+}
+
+.prosthiki{
+    width: 12%;
+    font-size: 1.2em;
+    align-self: flex-end;
+    padding: 0.3em;
+    background-color: white;
+    color: rgb(65, 131, 212);
+    border: 0.2em solid rgb(65, 131, 212);
+}
+
+.edit-form.prosthiki-form{
+    width: 90%;
+    margin: 2% auto;
+}
+
+.edit-form.prosthiki-form div{
+    width: 40%;
 }
