--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -161,3 +161,62 @@ textarea {
 .edit-form.prosthiki-form div {
     width: 40%;
 }
+
+.edit-form.prosthiki-form .ekthesi{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.edit-form.prosthiki-form .ekthesi .radios{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    flex:50%
+}
+
+.ekthesi .radio-monimi,.ekthesi .radio-periodiki{
+    display: flex;
+    flex-direction: row;
+}
+
+.ekthesi .radio-monimi label ,.ekthesi .radio-periodiki label{
+    font-weight: 400;
+}
+
+.edit-form.prosthiki-form .radio-monimi,.edit-form.prosthiki-form .radio-periodiki{
+    width: 60%;
+} 
+
+.edit-form.prosthiki-form .room{
+    display: none;
+}
+
+.edit-form.prosthiki-form .room #aithousa{
+    font-size: 1.5em;
+}
+
+ p{
+    font-size: 1.5em;
+    font-weight: 600;
+    margin-bottom: 0.5%;
+}
+
+@media screen and (max-width: 600px){
+
+    .prosthiki{
+        width: 20%;
+    }
+
+}
+
+@media screen and (min-width: 601px) and (max-width:1000px){
+    .prosthiki{
+        width: 15%;
+    }
+
+}
+
