--- a/views/tickets.hbs
+++ b/views/tickets.hbs
@@ -226,7 +226,12 @@
                 let formValues = {};
                 let inputs = form.querySelectorAll('input, select');
                 inputs.forEach(input => {
-                    formValues[input.name.slice(0, -1)] = input.value;
+                    if (input.name !== "onoma" && input.name !== "mail" && input.name !== "phone") {
+                        formValues[input.name.slice(0, -1)] = input.value;
+                    }
+                    else {
+                        formValues[input.name] = input.value;
+                    }
                 });
                 if (form.querySelector(".ektheseis") !== null) {
                     periodikes_ektheseis = form.querySelectorAll('.ektheseis .selected p');
