--- a/views/biography.hbs
+++ b/views/biography.hbs
@@ -55,3 +55,36 @@
         </div>
     </section>
 
+    <script>
+        let early=document.querySelector('.early_art');
+        early.addEventListener('click',function(event){
+            window.location.href="/biography/earliest-paintings";
+        })
+
+        let nuenen=document.querySelector('.nuenen');
+        nuenen.addEventListener('click',function(event){
+            window.location.href="/biography/nuenen";
+        })
+
+        let paris=document.querySelector('.paris');
+        paris.addEventListener('click',function(event){
+            window.location.href="/biography/paris";
+        })
+
+        let arles=document.querySelector('.arles');
+        arles.addEventListener('click',function(event){
+            window.location.href="/biography/arles";
+        })
+
+        let saintremy=document.querySelector('.saint-remy');
+        saintremy.addEventListener('click',function(event){
+            window.location.href="/biography/saint-remy";
+        })
+
+        let auvers=document.querySelector('.auvers');
+        auvers.addEventListener('click',function(event){
+            window.location.href="/biography/auvers-sur-oise";
+        })
+
+    </script>
+
