--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Διαχεριστής</title>
+    <title>Διαχειριστής</title>
     <link rel="stylesheet" type="text/css" href="/sidebar.css">
     <link rel="stylesheet" type="text/css" href="{{{css}}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
