--- a/views/admin-main.hbs
+++ b/views/admin-main.hbs
@@ -10,7 +10,7 @@
             <h5>{{this.arithmos_ergou}}</h5>
             <div class="buttons">
                 <button class="epex" onclick="edit('{{this.arithmos_ergou}}')">Επεξεργασία</button>
-                <button class="diag">Διαγραφή</button>
+                <button class="diag" onclick="deleteErgo('{{this.arithmos_ergou}}')">Διαγραφή</button>
             </div>
         </div>
         {{/each}}
@@ -22,7 +22,11 @@
         window.location.href = `/admin/edit/${arithmos_ergou}`;
     }
 
-    function addErgo(){
+    function addErgo() {
         window.location.href = "/admin/addPainting";
+    }
+
+    function deleteErgo(arithmos_ergou) {
+        window.location.href = "/admin/edit/delete/" + arithmos_ergou;
     }
 </script>
