admin login + dates fixed

--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -282,3 +282,43 @@ p {
     }
 
 }
+
+/*admin login*/
+.log-admin{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    margin:3% auto;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+h1{
+    font-family: inherit;
+    font-weight: 900;
+}
+
+.log-onoma,.log-pass{
+    font-size: 2em;
+    margin-bottom: 3%;
+    font-family: inherit;
+    width: 40%;
+    align-self: center;
+}
+
+.log-onoma{
+    margin-top: 1%;
+}
+
+.log-admin input{
+    width: 30%;
+}
+
+.log-admin .button{
+    width: 15%;
+    font-size: 1.5em;
+    background-color: rgb(34, 152, 199);
+    color:black;
+    border:0.1em solid black;
+}
